# am4-routemine

./: CHANGELOG.md  README.md  convert_csv.py  convert_csv.py:Zone.Identifier  fleet.csv  fleet.csv:Zone.Identifier  main.py  my_routes.csv  my_routes.csv:Zone.Identifier  pyproject.toml  requirements.txt
PRD/: am4-routemine-DASHBOARD-SPEC.md  am4-routemine-FLEET-SPEC.md  am4-routemine-FLEET-SPEC.md:Zone.Identifier
commands/: __init__.py  airline.py
dashboard/: db.py  server.py
dashboard/routes/: api_routes.py  pages.py
dashboard/static/js/: app.js
dashboard/templates/: aircraft.html  base.html  contributions.html  fleet_planner.html  heatmap.html  hub_explorer.html  index.html  my_fleet.html  my_routes.html  route_analyzer.html
dashboard/templates/partials/: aircraft_stats.html  aircraft_table.html  chart_data.html  contributions_table.html  fleet_inventory.html  fleet_plan_table.html  fleet_route_picker.html  fleet_summary.html  my_routes_inventory.html  my_routes_summary.html  route_compare_table.html  route_table.html  stats_cards.html
database/: schema.py
