[project]
name = "am4-routemine"
version = "0.1.0"
description = "Bulk AM4 route extraction into SQLite, CSV/Excel, and FastAPI dashboard."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "am4 @ git+https://github.com/abc8747/am4.git@master",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "tqdm>=4.65.0",
  "rich>=13.0.0",
]
